--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "conteudo",
         "deepcopy",
         "Diagrems",
+        "divindo",
         "fillvalue",
         "fontawesome",
         "funcao",
