--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "imporlib",
         "importlib",
         "inlinehilite",
+        "innodb",
         "interable",
         "intertools",
         "intevalo",
@@ -39,6 +40,7 @@
         "mult",
         "multip",
         "mutipil",
+        "mysql",
         "nonlocal",
         "opcao",
         "opcoes",
